# file-indexer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
include/: AppResults.h  Cli.h  Database.h  DbResults.h  Entry.h  Hasher.h  IndexApp.h  PlatformPaths.h  Scanner.h
include/app/: IndexApp.h
include/cli/: Cli.h
include/db/: Database.h  DbResults.h
include/model/: Duplicates.h  Index.h
include/scanner/: Scanner.h
include/util/: FileTime.h  PlatformPaths.h
src/: Cli.cpp  Database.cpp  IndexApp.cpp  PlatformPaths.cpp  Scanner.cpp  main.cpp
src/app/: IndexApp.cpp
src/cli/: Cli.cpp
src/db/: Database.cpp
src/hashing/: Hasher.cpp
src/model/: Duplicates.cpp  Index.cpp
src/util/: FileTime.cpp  PlatformPaths.cpp
